--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "osmtogeojson": "^3.0.0-beta.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.17"
   },
