--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "lint": "eslint ."
   },
   "dependencies": {
     "osmtogeojson": "^3.0.0-beta.5",
@@ -27,7 +26,6 @@
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitest/eslint-plugin": "^1.2.7",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
-    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
@@ -38,9 +36,9 @@
     "jsdom": "^26.1.0",
     "leaflet": "^1.9.4",
     "npm-run-all2": "^8.0.4",
-    "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.10"
