--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/geojson": "^7946.0.16",
     "osmtogeojson": "^3.0.0-beta.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.17"
