--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@turf/simplify": "^7.2.0",
     "@types/geojson": "^7946.0.16",
     "osmtogeojson": "^3.0.0-beta.5",
     "pinia": "^3.0.3",
