--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,8 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "target": "ES2021",
+    "lib": ["ES2021", "DOM"],
 
     "paths": {
       "@/*": ["./src/*"]
